[package]
name = "egui_custom_frame"
version = "0.1.0"
edition = "2021"
description = "Custom your egui window frame."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/a-littlebit/egui_custom_frame"
repository = "https://github.com/a-littlebit/egui_custom_frame"
readme = "README.md"

[dependencies]
eframe = "0.28.1"
egui = "0.28.1"

[[example]]
name = "custom_frame"
